WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276910
[WebGPU] synchronizeResource: calls are missing for non-UMA platforms
https://bugs.webkit.org/show_bug.cgi?id=276910
Summary
[WebGPU] synchronizeResource: calls are missing for non-UMA platforms
Mike Wyrzykowski
Reported
2024-07-22 14:49:25 PDT
[WebGPU] synchronizeResource: calls are missing for non-UMA platforms
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-07-22 14:49:37 PDT
radar://131950319
Mike Wyrzykowski
Comment 2
2024-07-22 15:27:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31086
EWS
Comment 3
2024-07-23 11:22:40 PDT
Committed
281255@main
(0f9c15e7690c): <
https://commits.webkit.org/281255@main
> Reviewed commits have been landed. Closing PR #31086 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug