[WebGPU] synchronizeResource: calls are missing for non-UMA platforms https://bugs.webkit.org/show_bug.cgi?id=276910 <radar://131950319>

Reviewed by Tadeu Zagallo.

Make sure sychronizeResource: and didModifyRange: calls occur when
needed for non-UMA platforms.

* Source/WebGPU/WebGPU/Buffer.mm:
(WebGPU::storageMode):
(WebGPU::Buffer::setCommandEncoder const):
(WebGPU::Buffer::unmap):
* Source/WebGPU/WebGPU/CommandEncoder.h:
* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::CommandEncoder):
(WebGPU::CommandEncoder::addBuffer):
(WebGPU::CommandEncoder::addTexture):
(WebGPU::CommandEncoder::finish):
* Source/WebGPU/WebGPU/Device.mm:
(WebGPU::Device::Device):
* Source/WebGPU/WebGPU/HardwareCapabilities.mm:
(WebGPU::maxBufferSize):
* Source/WebGPU/WebGPU/QuerySet.mm:
(WebGPU::QuerySet::setCommandEncoder const):
* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::setCommandEncoder const):
* Source/WebGPU/WebGPU/TextureView.mm:
(WebGPU::TextureView::setCommandEncoder const):

Canonical link: https://commits.webkit.org/281255@main